--- a/app/globals.css
+++ b/app/globals.css
@@ -2,32 +2,237 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+@layer base {
+    :root {
+        --background: 0 0% 100%;
+        --foreground: 222.2 84% 4.9%;
+        --card: 0 0% 100%;
+        --card-foreground: 222.2 84% 4.9%;
+        --popover: 0 0% 100%;
+        --popover-foreground: 222.2 84% 4.9%;
+        --primary: 222.2 47.4% 11.2%;
+        --primary-foreground: 210 40% 98%;
+        --secondary: 210 40% 96.1%;
+        --secondary-foreground: 222.2 47.4% 11.2%;
+        --muted: 210 40% 96.1%;
+        --muted-foreground: 215.4 16.3% 46.9%;
+        --accent: 210 40% 96.1%;
+        --accent-foreground: 222.2 47.4% 11.2%;
+        --destructive: 0 84.2% 60.2%;
+        --destructive-foreground: 210 40% 98%;
+        --border: 214.3 31.8% 91.4%;
+        --input: 214.3 31.8% 91.4%;
+        --ring: 222.2 84% 4.9%;
+        --radius: 0.5rem;
+        --chart-1: 12 76% 61%;
+        --chart-2: 173 58% 39%;
+        --chart-3: 197 37% 24%;
+        --chart-4: 43 74% 66%;
+        --chart-5: 27 87% 67%;
+    }
+
+    :root {
+        --background: 222.2 84% 4.9%;
+        --foreground: 210 40% 98%;
+        --card: 222.2 84% 4.9%;
+        --card-foreground: 210 40% 98%;
+        --popover: 222.2 84% 4.9%;
+        --popover-foreground: 210 40% 98%;
+        --primary: 210 40% 98%;
+        --primary-foreground: 222.2 47.4% 11.2%;
+        --secondary: 217.2 32.6% 17.5%;
+        --secondary-foreground: 210 40% 98%;
+        --muted: 217.2 32.6% 17.5%;
+        --muted-foreground: 215 20.2% 65.1%;
+        --accent: 217.2 32.6% 17.5%;
+        --accent-foreground: 210 40% 98%;
+        --destructive: 0 62.8% 30.6%;
+        --destructive-foreground: 210 40% 98%;
+        --border: 217.2 32.6% 17.5%;
+        --input: 217.2 32.6% 17.5%;
+        --ring: 212.7 26.8% 83.9%;
+        --chart-1: 220 70% 50%;
+        --chart-2: 160 60% 45%;
+        --chart-3: 30 80% 55%;
+        --chart-4: 280 65% 60%;
+        --chart-5: 340 75% 55%;
+    }
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
+@layer base {
+    * {
+        @apply border-border;
+    }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+    body {
+        @apply bg-background text-foreground;
+    }
+
+    /* Remove scrollbar */
+    .remove-scrollbar::-webkit-scrollbar {
+        width: 0px;
+        height: 0px;
+        border-radius: 0px;
+    }
+
+    .remove-scrollbar::-webkit-scrollbar-track {
+        background: transparent;
+    }
+
+    .remove-scrollbar::-webkit-scrollbar-thumb {
+        background: transparent;
+        border-radius: 0px;
+    }
+
+    .remove-scrollbar::-webkit-scrollbar-thumb:hover {
+        /* background: #1e2238; */
+        background: transparent;
+    }
+
+    .bb {
+        @apply border border-white;
+    }
 }
 
 @layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+    .container {
+        @apply relative flex-1 overflow-y-auto px-[5%] lg:px-[10%];
+    }
+
+    .input {
+        @apply flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:!border-0 file:!bg-transparent file:!text-sm file:!font-medium placeholder:!text-muted-foreground focus-visible:!outline-none focus-visible:!ring-2 focus-visible:!ring-ring focus-visible:!ring-offset-2 disabled:!cursor-not-allowed disabled:!opacity-50;
+    }
+
+    /* ===== TYPOGRAPHY */
+    .text-36-bold {
+        @apply text-[36px] leading-[40px] font-bold;
+    }
+
+    .text-24-bold {
+        @apply text-[24px] leading-[28px] font-bold;
+    }
+
+    .text-32-bold {
+        @apply text-[32px] leading-[36px] font-bold;
+    }
+
+    .text-18-bold {
+        @apply text-[18px] leading-[24px] font-bold;
+    }
+
+    .text-16-semibold {
+        @apply text-[16px] leading-[20px] font-semibold;
+    }
+
+    .text-16-regular {
+        @apply text-[16px] leading-[20px] font-normal;
+    }
+
+    .text-14-medium {
+        @apply text-[14px] leading-[18px] font-medium;
+    }
+
+    .text-14-regular {
+        @apply text-[14px] leading-[18px] font-normal;
+    }
+
+    .text-12-regular {
+        @apply text-[12px] leading-[16px] font-normal;
+    }
+
+    .text-12-semibold {
+        @apply text-[12px] leading-[16px] font-semibold;
+    }
+
+    /* .green-btn {
+        @apply !bg-green-500 !text-white hover:!bg-green-600;
+    } */
+}
+
+/* =====  REACT-DATEPICKER OVERRIDES */
+.react-datepicker-wrapper.date-picker {
+    display: flex !important;
+    align-items: center !important;
+}
+
+.react-datepicker,
+.react-datepicker__time,
+.react-datepicker__header,
+.react-datepicker__current-month,
+.react-datepicker__day-name,
+.react-datepicker__day,
+.react-datepicker-time__header {
+    background-color: hsl(var(--background)) !important;
+    border-color: hsl(var(--border)) !important;
+    color: hsl(var(--primary)) !important;
+}
+
+.react-datepicker__current-month,
+.react-datepicker__day-name,
+.react-datepicker-time__header {
+    color: hsl(var(--primary)) !important;
+}
+
+.react-datepicker__triangle {
+    fill: transparent !important;
+    color: transparent !important;
+    stroke: transparent !important;
+}
+
+.react-datepicker__time-list-item:hover {
+    background-color: #363a3d !important;
+}
+
+.react-datepicker-wrapper {
+    width: 100% !important;
+}
+
+.react-datepicker__input-container input {
+    background-color: transparent !important;
+    width: 100% !important;
+    outline: none;
+}
+
+.react-datepicker__day--selected {
+    background-color: hsl(var(--primary)) !important;
+    color: black !important;
+    border-radius: 4px;
+}
+
+.react-datepicker__day:hover {
+    background-color: hsl(var(--secondary)) !important;
+    color: var(--primary) !important;
+    border-radius: 4px;
+}
+
+.react-datepicker__time-list-item--selected {
+    background-color: hsl(var(--primary)) !important;
+    color: black !important;
+}
+
+.react-datepicker__time-container {
+    border-left: 1px solid #363a3d !important;
+}
+
+.react-datepicker__time-list-item {
+    display: flex !important;
+    align-items: center !important;
+}
+
+/* =====  REACT PHONE NUMBER INPUT OVERRIDES */
+.PhoneInputInput {
+    outline: none;
+    margin-left: 4px;
+    background: transparent;
+    font-size: 14px;
+    font-weight: 500;
+}
+
+.PhoneInputInput::placeholder {
+    color: #1a1d21;
+}
+
+.PhoneInputCountrySelect,
+.PhoneInputCountrySelect option {
+    @apply text-black;
 }
